--- a/test.tex
+++ b/test.tex
@@ -6,5 +6,17 @@
     \section{Page2} \lipsum[2-2] \newpage
     \section{Page3} \lipsum[3-3] \newpage
     \section{Page4} \lipsum[4-4] \newpage
+    \section{Page5} \lipsum[1-1] \newpage
+    \section{Page6} \lipsum[2-2] \newpage
+    \section{Page7} \lipsum[3-3] \newpage
+    \section{Page8} \lipsum[4-4] \newpage
+    \section{Page9} \lipsum[1-1] \newpage
+    \section{Page10} \lipsum[2-2] \newpage
+    \section{Page11} \lipsum[3-3] \newpage
+    \section{Page12} \lipsum[4-4] \newpage
+    \section{Page13} \lipsum[1-1] \newpage
+    \section{Page14} \lipsum[2-2] \newpage
+    \section{Page15} \lipsum[3-3] \newpage
+    \section{Page126} \lipsum[4-4] \newpage
 \end{document}
 
