完成了折页和切页排版

--- a/test.tex
+++ b/test.tex
@@ -2,21 +2,21 @@
 \usepackage[a4paper]{geometry}
 \usepackage{lipsum}
 \begin{document}
-    \section{Page1} \lipsum[1-1] \newpage
-    \section{Page2} \lipsum[2-2] \newpage
-    \section{Page3} \lipsum[3-3] \newpage
-    \section{Page4} \lipsum[4-4] \newpage
-    \section{Page5} \lipsum[1-1] \newpage
-    \section{Page6} \lipsum[2-2] \newpage
-    \section{Page7} \lipsum[3-3] \newpage
-    \section{Page8} \lipsum[4-4] \newpage
-    \section{Page9} \lipsum[1-1] \newpage
-    \section{Page10} \lipsum[2-2] \newpage
-    \section{Page11} \lipsum[3-3] \newpage
-    \section{Page12} \lipsum[4-4] \newpage
-    \section{Page13} \lipsum[1-1] \newpage
-    \section{Page14} \lipsum[2-2] \newpage
-    \section{Page15} \lipsum[3-3] \newpage
-    \section{Page16} \lipsum[4-4] \newpage
+    \section{Page1} \centerline{\fontsize{288pt}{288pt}\selectfont 1} \lipsum[1-1] \newpage
+    \section{Page2} \centerline{\fontsize{288pt}{288pt}\selectfont 2} \lipsum[2-2] \newpage
+    \section{Page3} \centerline{\fontsize{288pt}{288pt}\selectfont 3} \lipsum[3-3] \newpage
+    \section{Page4} \centerline{\fontsize{288pt}{288pt}\selectfont 4} \lipsum[4-4] \newpage
+    \section{Page5} \centerline{\fontsize{288pt}{288pt}\selectfont 5} \lipsum[1-1] \newpage
+    \section{Page6} \centerline{\fontsize{288pt}{288pt}\selectfont 6} \lipsum[2-2] \newpage
+    \section{Page7} \centerline{\fontsize{288pt}{288pt}\selectfont 7} \lipsum[3-3] \newpage
+    \section{Page8} \centerline{\fontsize{288pt}{288pt}\selectfont 8} \lipsum[4-4] \newpage
+    \section{Page9} \centerline{\fontsize{288pt}{288pt}\selectfont 9} \lipsum[1-1] \newpage
+    \section{Page10} \centerline{\fontsize{288pt}{288pt}\selectfont 10} \lipsum[2-2] \newpage
+    \section{Page11} \centerline{\fontsize{288pt}{288pt}\selectfont 11} \lipsum[3-3] \newpage
+    \section{Page12} \centerline{\fontsize{288pt}{288pt}\selectfont 12} \lipsum[4-4] \newpage
+    \section{Page13} \centerline{\fontsize{288pt}{288pt}\selectfont 13} \lipsum[1-1] \newpage
+    \section{Page14} \centerline{\fontsize{288pt}{288pt}\selectfont 14} \lipsum[2-2] \newpage
+    \section{Page15} \centerline{\fontsize{288pt}{288pt}\selectfont 15} \lipsum[3-3] \newpage
+    \section{Page16} \centerline{\fontsize{288pt}{288pt}\selectfont 16} \lipsum[4-4] \newpage
 \end{document}
 
